' FileSystemTreeView node types

@startuml

skinparam title {
	BorderRoundCorner 15
	BorderThickness 2
	BackgroundColor Aqua-CadetBlue
}

skinparam packageStyle Frame

title FileSystemTreeView node types

package java.io {

	interface Closeable {
		void close() throws IOException
	}
}

package base #Ivory {

	interface RootNodeCtrl

	interface PathView {
		+ Path getPath()
		+ String getName()
	}

	interface RootNodeCtrl extends java.io.Closeable {
		NodeView getNodeView()
		PathSelection getPathSelection()
		void setExpanded(boolean expanded)
		NodeView expandPath(Path absolutePath, boolean expandLastElement)
		void updateTree()
		SortedSet<Path> getExpandedPaths()
		void setExpandedPaths(Iterable<Path> paths)
	}
}

package base.ctrl {

	abstract class DirectoryEntry implements base.PathView {

		{abstract} ~ NodeCtrl getNodeCtrl()
		+ void handleNodeExpansion(boolean expand)
	}

	class DirectoryEntryFileSystem extends DirectoryEntry {
		NodeCtrlDirectory getNodeCtrl()
	}

	class DirectoryEntrySubDirectory extends DirectoryEntry {
		NodeCtrlDirectory getNodeCtrl()
	}

	class DirectoryEntryRegularFile extends DirectoryEntry {
		NodeCtrlFileSystemRootsCustom getNodeCtrl()
	}

	abstract class NodeCtrl {
		+NodeView getNodeView()
		~ DirectoryEntry getDirectoryEntry()
		~ SubNodes getSubNodes()
		~ NodeConfig getNodeConfig()
		~ UserNodeConfiguration getUserNodeConfiguration()
		{abstract} ~ void updateDirectoryEntries()
	}

	NodeCtrl --> DirectoryEntry
	NodeCtrl --> SubNodes

	class NodeCtrlFileSystemRootsGlobal extends NodeCtrl implements base.RootNodeCtrl {
		~ void updateDirectoryEntries()
	}

	class WatchServiceCtrl implements java.io.Closeable
}

@enduml

